crates/math-core/tests/snapshots/conversion_test__operator_name_star_with_sub.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\operatorname*{max}_x"
---
<math>
    <msub>
        <mrow><mspace/><mi>max</mi></mrow>
        <mi>x</mi>
    </msub>
</math>
