crates/math-core/tests/snapshots/conversion_test__operator_name_with_displaylimits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\operatorname{max}\\displaylimits_x^y"
---
<math>
    <msubsup>
        <mo lspace="0" rspace="0">max</mo>
        <mi>x</mi>
        <mi>y</mi>
    </msubsup>
</math>
