crates/math-core/tests/snapshots/conversion_test__operator_name_with_limits.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\operatorname{max}\\limits_x"
---
<math>
    <munder>
        <mrow><mspace/><mi>max</mi></mrow>
        <mi>x</mi>
    </munder>
</math>
