crates/math-core/tests/snapshots/conversion_test__operator_name_with_single_char.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\operatorname{a}"
---
<math>
    <mrow><mspace/><mi mathvariant="normal">a</mi></mrow>
</math>
