crates/math-core/tests/snapshots/conversion_test__operator_name_with_single_char_and_argument.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\operatorname{a} x"
---
<math>
    <mrow>
        <mrow><mspace/><mi mathvariant="normal">a</mi></mrow>
        <mo lspace="0.1667em">&ApplyFunction;</mo>
        <mi>x</mi>
    </mrow>
</math>
