crates/math-core/tests/snapshots/conversion_test__operator_name_with_space_cmd.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\operatorname{arg\\,max}"
---
<math>
    <mrow><mspace/><mi>arg max</mi></mrow>
</math>
