crates/math-core/tests/snapshots/conversion_test__operator_name_with_spaces.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\operatorname{ hel lo }"
---
<math>
    <mrow><mspace/><mi>hello</mi></mrow>
</math>
