crates/math-core/tests/snapshots/conversion_test__operator_name_with_text.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\operatorname{\\text{ab}c\\textit{de}f}"
---
<math>
    <mrow><mspace/><mi>abcdef</mi></mrow>
</math>
