crates/math-core/tests/snapshots/conversion_test__operatorname_with_other_operator.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\operatorname{\\max}"
---
<math>
    <mi>x</mi>
    <mspace width="0.1667em"/>
    <mrow><mspace/><mi>max</mi></mrow>
</math>
