crates/math-core/tests/snapshots/conversion_test__over.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "{\\log x + a^n - \\sin(\\theta+\\eta) \\over x}"
---
<math>
    <mfrac>
        <mrow>
            <mrow>
                <mrow><mspace/><mi>log</mi></mrow>
                <mo lspace="0.1667em">&ApplyFunction;</mo>
                <mi>x</mi>
            </mrow>
            <mo>+</mo>
            <msup>
                <mi>a</mi>
                <mi>n</mi>
            </msup>
            <mo>−</mo>
            <mrow>
                <mrow><mspace/><mi>sin</mi></mrow>
                <mo>&ApplyFunction;</mo>
                <mrow>
                    <mo stretchy="false">(</mo>
                    <mi>θ</mi>
                    <mo>+</mo>
                    <mi>η</mi>
                    <mo stretchy="false">)</mo>
                </mrow>
            </mrow>
        </mrow>
        <mi>x</mi>
    </mfrac>
</math>
